--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-icons": "^5.3.0",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
+    "react-router-dom": "^7.0.1",
     "react-slick": "^0.30.2",
     "react-spinners": "^0.14.1",
     "react-tabs": "^6.0.2",
